--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,7 +61,7 @@
 
           <mat-tab label='Edit'>
               <div style='background-color: #181818;'>
-
+                <app-edit></app-edit>
               </div>
             </mat-tab>
 
