--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,10 @@ body { background-color: #181818; margin: 0; font-family: Roboto, "Helvetica Neu
     display: flex;
   }
 
+  .maxwidth {
+    width: 100%;
+  }
+
 // style classses ------------------------------------------------------------------
 
     .floatingbox {
