create new person

--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -35,7 +35,7 @@
             </tr>
             <tr>
                 <td colspan='2'>
-                    <button mat-raised-button color='accent' class='maxwidth'>Create new person</button>
+                    <button mat-raised-button color='accent' class='maxwidth' (click)='CreatePerson()'>Create new person</button>
                 </td>
             </tr>
         </table>
