--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -7,35 +7,35 @@
                 <td>
                     <mat-form-field appearance="fill" style='width: 8rem;'>
                         <mat-label>First Name</mat-label>
-                        <input matInput placeholder="john" [(ngModel)]='newperson.fname'>
-                      </mat-form-field>            
+                        <input matInput placeholder="john" [(ngModel)]='newPerson.fname'>
+                    </mat-form-field>
                 </td>
                 <td>
                     <mat-form-field appearance="fill" style='width: 8rem;'>
                         <mat-label>Last Name</mat-label>
-                        <input matInput placeholder="doe" [(ngModel)]='newperson.lname'>
-                      </mat-form-field>            
+                        <input matInput placeholder="doe" [(ngModel)]='newPerson.lname'>
+                    </mat-form-field>
                 </td>
             </tr>
             <tr>
                 <td colspan='2'>
                     <mat-form-field appearance="fill" style='width: 16rem;'>
                         <mat-label>Address</mat-label>
-                        <input matInput placeholder="123 candy lane" [(ngModel)]='newperson.addr'>
-                      </mat-form-field>
+                        <input matInput placeholder="123 candy lane" [(ngModel)]='newPerson.addr'>
+                    </mat-form-field>
                 </td>
             </tr>
             <tr>
                 <td colspan='2'>
                     <mat-form-field appearance="fill" style='width: 16rem;'>
                         <mat-label>City</mat-label>
-                        <input matInput placeholder="North Pole" [(ngModel)]='newperson.city'>
-                      </mat-form-field>
+                        <input matInput placeholder="North Pole" [(ngModel)]='newPerson.city'>
+                    </mat-form-field>
                 </td>
             </tr>
             <tr>
                 <td colspan='2'>
-                    <button mat-raised-button color='accent' class='maxwidth' (click)='CreatePerson()'>Create new person</button>
+                    <button mat-raised-button color='accent' class='maxwidth' (click)='createPerson()'>Create new person</button>
                 </td>
             </tr>
         </table>
@@ -50,10 +50,10 @@
         <table *ngIf='ldata.people.length > 1'>
             <tr>
                 <th>ID</th>
-                <th><button mat-raised-button (click)='sortby(1)' class='maxwidth'>First</button></th>
-                <th><button mat-raised-button (click)='sortby(2)' class='maxwidth'>Last</button></th>
-                <th><button mat-raised-button (click)='sortby(3)' class='maxwidth'>Addr</button></th>
-                <th><button mat-raised-button (click)='sortby(4)' class='maxwidth'>City</button></th>
+                <th><button mat-raised-button (click)='sortBy(1)' class='maxwidth'>First</button></th>
+                <th><button mat-raised-button (click)='sortBy(2)' class='maxwidth'>Last</button></th>
+                <th><button mat-raised-button (click)='sortBy(3)' class='maxwidth'>Addr</button></th>
+                <th><button mat-raised-button (click)='sortBy(4)' class='maxwidth'>City</button></th>
             </tr>
             <tr *ngFor='let item of ldata.people'>
                 <td>{{item._id}}</td>
@@ -63,15 +63,6 @@
                 <td>{{item.city}}</td>
             </tr>
         </table>
-        </div>
-
-
-
-
-
-
-
-
     </div>
 
 
@@ -81,7 +72,4 @@
 
 
 
-
-
-
-
+</div>
